# trappist-extra

./: README.md  macos-instructions.md  macos.md  pubspec.yaml
android/: .gitignore
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/trappist_extra/: MainActivity.kt
assets/chainspecs/: bridge-hub-kusama.json  rockmine.json  rococo.json  statemine.json
assets/images/logos/: kusama.svg.vec  polkadot.svg.vec  statemint.svg.vec
docs/: linux-instructions.md  macos-instructions.md
ios/Runner/: AppDelegate.swift  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  ffi.dart  main.dart
lib/models/: chain.dart
lib/pages/: home.dart  status.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
macos/Runner/: Info.plist  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
smoldot-flutter/: Cargo.toml
smoldot-flutter/smoldot-flutter.xcodeproj/: project.pbxproj
smoldot-flutter/smoldot-flutter.xcodeproj/xcuserdata/steve.xcuserdatad/xcschemes/: xcschememanagement.plist
smoldot-flutter/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  logger.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
