[package]
name = "smoldot-flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
android_logger = "0.12"
anyhow = "1"
curve25519-dalek = "=4.0.0-pre.5"
env_logger = "0.10.0"
flutter_rust_bridge = "<1.62.0"
lazy_static = "1.4.0"
log = { version = "0.4.17" }
simplelog = "0.12.0"
smoldot-light = { version = "0.3.0", git = "https://github.com/stiiifff/smoldot", branch = "sde-light-base-conv-chain-id" }
time = "0.3.17"

# `std` feature
async-std = { version = "1.12.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }

[features]
default = ["std"]
std = ["async-std", "parking_lot", "smoldot-light/std"]

# [dev-dependencies]
# env_logger = "0.10.0"
